--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,37 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col">colonne A</div>
+        <div class="col-8">colonne B</div>
+        <div class="col">colonne C</div>
+      </div>
+
+      <div class="row">
+        <div class="col-5">colonne D</div>
+        <div class="col-3">colonne E</div>
+        <div class="col-2">colonne F</div>
+      </div>
+
+      <div class="row">
+        <div class="col-7">colonne G</div>
+        <div class="col-5">colonne H</div>
+        <div class="col-4">colonne I</div>
+        <div class="col-4">colonne J</div>
+      </div>
+
+      <div class="row">
+        <div class="col-4">colonne K</div>
+        <div class="col-4">colonne L</div>
+        <div class="col-2">colonne M</div>
+        <div class="col-2">colonne N</div>
+        <div class="col-4">colonne O</div>
+        <div class="col-4">colonne P</div>
+        <div class="col-2">colonne Q</div>
+        <div class="col-2">colonne R</div>
+      </div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
